cleanup Warnings